--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Predict"
         tools:targetApi="31">
         <activity
+            android:name=".ui.NavBar.BottomNavigationActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.register_activity"
             android:exported="false" />
         <activity
